# FlowerTune-xLSTM-7b-NLP-PEFT

./: README.md  pyproject.toml
flowertune_eval/: README.md  eval.py  requirements.txt
flowertune_eval/benchmarks/: acc_mmlu_humanities_fl.txt  acc_mmlu_social_sciences_fl.txt  acc_mmlu_stem_fl.txt  communication_budget.txt  train_loss.txt
flowertune_nlp/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
